--- a/app/src/main/res/layout/activity_calculatrice.xml
+++ b/app/src/main/res/layout/activity_calculatrice.xml
@@ -398,7 +398,7 @@
         android:rotationX="0"
         android:rotationY="0"
         android:textAlignment="center"
-        android:textColor="#0E3CE3"
+        android:textColor="@color/colorText"
         android:textSize="60sp"
         android:textStyle="bold"
         android:typeface="sans"
@@ -412,7 +412,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:textColor="#000000"
+        android:textColor="@color/colorText"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
