--- a/app/src/main/res/layout/activity_jeu3.xml
+++ b/app/src/main/res/layout/activity_jeu3.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Jeu3Activity">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="64dp"
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="277dp" />
+
+    <Button
+        android:id="@+id/StartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="381dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
