--- a/app/src/main/res/layout/activity_jeu2.xml
+++ b/app/src/main/res/layout/activity_jeu2.xml
@@ -44,6 +44,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="#3CDF60"
+            android:onClick="buttonclick"
             android:text="Button" />
 
         <Button
@@ -52,6 +53,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="#83F44336"
+            android:onClick="buttonclick"
             android:text="Button" />
 
         <Button
@@ -60,6 +62,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="#3F51B5"
+            android:onClick="buttonclick"
             android:text="Button" />
 
         <Button
@@ -68,6 +71,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="#9C27B0"
+            android:onClick="buttonclick"
             android:text="Button" />
 
     </LinearLayout>
